--- a/src/pages/modulo-viagens/viagens/viagens.scss
+++ b/src/pages/modulo-viagens/viagens/viagens.scss
@@ -82,4 +82,11 @@ page-viagens {
         min-width: 20vw;
         max-width: 50vw;   
         }
+    .fab{
+            transform: scale(0.6);
+            position: absolute;
+            margin-top: -30%;
+            margin-left: 75%;
+            font-size: 100%
+        }
 }
